--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-jquery-vimeosubs
-
-A jQuery plugin for displaying .srt subtitles along with videos hosted on vimeo.com.
+new version: https://github.com/loopmode/websubs
